--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,9 @@
 /* Your CSS Code here. */
 .holder{
 	display:grid;
-	grid-template-columns:repeat(2,200px);
+	grid-template-columns:100px 100px;
+	grid-template-rows:100px 100px;
+}
+.item item-1 .item item-2 .item item-3 .item item-4{
 	background-color:red;
 }
